Init the react app

--- a/package.json
+++ b/package.json
@@ -1,17 +1,36 @@
 {
-  "name": "",
-  "version": "",
+  "name": "webapp",
+  "version": "1.0.0",
   "description": "",
   "author": "",
-  "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "react-dev": "webpack --mode development --watch",
+    "server-dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "css-loader": "^6.7.1",
+    "express": "^4.17.3",
+    "jQuery": "^1.7.4",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "style-loader": "^3.3.1",
+    "underscore": "^1.13.2"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
