--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-config-hackreactor":  "https://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^27.5.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
