add test storage in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,5 @@ jobs:
           command: npm test
       - store_artifacts:
           path: ~/repo/test_artifacts
+      - store_test_results:
+          path: test-results
