update server to forward requests to API, adding API key, and relay server response back to client

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jQuery": "^1.7.4",
     "nodemon": "^2.0.15",
@@ -29,7 +30,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
-    "eslint-config-hackreactor":  "https://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-config-hackreactor": "https://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^27.5.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
