--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-hackreactor": "https://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "jest": "^27.5.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
