--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "jQuery": "^1.7.4",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
