--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
     "underscore": "^1.13.2"
   },
@@ -31,6 +32,7 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^13.0.0",
     "babel-loader": "^8.2.4",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -43,5 +45,8 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
