--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/react": "^13.0.0",
     "axios": "^0.26.1",
+    "babel-jest": "^27.5.1",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -23,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-test-renderer": "^18.0.0",
     "style-loader": "^3.3.1",
     "underscore": "^1.13.2"
   },
