--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/dom": "^8.13.0",
     "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.0.4",
     "babel-loader": "^8.2.4",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
