finish implementation of Image Gallery - default view

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-gallery-carousel": "^0.2.9",
+    "react-image-gallery": "^1.2.7",
     "react-multi-carousel": "^2.8.0",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
