--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-gallery-carousel": "^0.2.9",
     "react-multi-carousel": "^2.8.0",
+    "reactjs-popup": "^2.0.5",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
     "underscore": "^1.13.2"
