--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "jQuery": "^1.7.4",
+    "moment": "^2.29.2",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
