--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-gallery-carousel": "^0.2.9",
     "react-inner-image-zoom": "^3.0.0",
     "react-multi-carousel": "^2.8.0",
+    "react-select": "^5.2.2",
     "reactjs-popup": "^2.0.5",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
