--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.6.0",
     "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
