--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "jupiter-clothing",
   "version": "1.0.0",
   "description": "",
   "author": "",
@@ -7,6 +7,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "build": "webpack",
     "react-dev": "webpack --mode development --watch",
     "server-dev": "nodemon server/index.js",
     "test": "jest"
@@ -18,30 +19,25 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.6.0",
-    "@testing-library/jest-dom": "^5.16.4",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "jQuery": "^1.7.4",
     "moment": "^2.29.2",
-    "nodemon": "^2.0.15",
     "path": "^0.12.7",
+    "pm2": "^5.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^18.0.0",
     "react-gallery-carousel": "^0.2.9",
     "react-inner-image-zoom": "^3.0.0",
-    "react-multi-carousel": "^2.8.0",
     "react-rating": "^2.0.5",
     "react-select": "^5.2.2",
     "reactjs-popup": "^2.0.5",
-    "regenerator-runtime": "^0.13.9",
-    "style-loader": "^3.3.1",
-    "underscore": "^1.13.2"
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -49,6 +45,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
     "babel-loader": "^8.2.4",
@@ -61,7 +58,10 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "file-loader": "^6.2.0",
     "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "regenerator-runtime": "^0.13.9",
     "webpack": "^5.72.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
