--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "build": "webpack",
+    "build-prod": "webpack --mode production",
     "react-dev": "webpack --mode development --watch",
     "server-dev": "nodemon server/index.js",
     "test": "jest"
