--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.6.0",
+    "async": "^3.2.3",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.1",
