--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build-prod": "webpack --mode production",
+    "build-stats": "webpack --json > stats.json",
     "react-dev": "webpack --mode development --watch",
     "server-dev": "nodemon server/index.js",
     "test": "jest"
