--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "async": "^3.2.3",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
+    "compression": "^1.7.4",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "express-static-gzip": "^2.1.5",
     "moment": "^2.29.2",
     "path": "^0.12.7",
     "pm2": "^5.2.0",
@@ -52,6 +54,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
     "babel-loader": "^8.2.4",
+    "compression-webpack-plugin": "^9.2.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-hackreactor": "https://github.com/reactorcore/eslint-config-hackreactor",
