--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "file-loader": "^6.2.0",
+    "html-critical-webpack-plugin": "^2.1.0",
+    "imagemin-avif-webpack-plugin": "^0.0.1",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "regenerator-runtime": "^0.13.9",
